--- a/k8s/tpprojet-deployment.yaml
+++ b/k8s/tpprojet-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tpprojet
-          image: ines10/tpprojettpprojet:latest
+          image: ines10/tpprojet:latest
           ports:
             - containerPort: 8089
           env:
